setting server port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ server.error.include-message=always
 app.testrun=false
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+server.port=8081git ad
